# medical-office

./: .gitignore  CLAUDE.md  README.md  build-crm-react.bat  build-crm.bat  crm-desktop.spec  crm-server.spec  crm-web.spec  crm_app.py  crm_server.py  crm_web.py  import-actes.bat  modele_actes.xlsx  prd_depenses.md  requirements.txt  reset.bat  run-crm-web.bat  run-crm.bat  spec_technique_depenses.md
.claude/: settings.local.json
crm/: __init__.py  __main__.py  app.py  backup.py  db.py  generator.py  import_actes.py  print_settings.py  printing.py  repo.py  reset.py  server.py  templates.py  version.py
crm/routers/: __init__.py  clinical.py  dashboard.py  documents.py  finances.py  jobs.py  patients.py  prestataires.py
openspec/: config.yaml
openspec/changes/envoi-whatsapp/: design.md  proposal.md  tasks.md
openspec/changes/etude-migration-ui-react/: design.md  proposal.md  tasks.md
openspec/specs/fiche-patient/: spec.md
prompts/: facture_montant.txt
src/: config.py  doc_filler.py  mailer.py  odontogram_geometry.py  odontogram_render.py  pdf_to_jpg.py  ui.py
src/ai/: __init__.py  base.py  factory.py  images.py  log.py
tools/: extract_odontogram_geometry.py  make_sample_note_template.py
ui/: .env.example  .gitignore  README.md  index.html  openapi.json  package-lock.json  package.json  shot.mjs  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
(+173 files in other folders)
