[package]
name = "cabinet-crm"
version = "1.0.0"
description = "Cabinet CRM — coquille Tauri (frontend React + sidecar FastAPI)"
authors = ["Cabinet Dr Aslem Gouiaa"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Activé par `tauri dev` / `tauri build` selon la cible.
custom-protocol = ["tauri/custom-protocol"]
